--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,12 @@
 {
-    "version": 2,
-    "builds": [
-        {"src": "app.py", "use": "@vercel/python"}
-    ],
-    "routes": [
-        {"src": "/(.*)", "dest": "app.py"}
-    ]
+  "version": 3,
+  "builds": [
+    {
+      "src": "app.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {"src": "/(.*)", "dest": "app.py"}
+  ]
 }
