--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,214 @@
-blinker==1.8.2
-certifi==2024.8.30
+absl-py==2.1.0
+accelerate==0.31.0
+addict==2.4.0
+aenum==3.1.15
+aiofiles==23.2.1
+aiohttp==3.9.3
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
+altair==5.3.0
+annotated-types==0.6.0
+antlr4-python3-runtime==4.9.3
+anyio==4.3.0
+asgiref==3.8.1
+async-timeout==4.0.3
+attrs==23.2.0
+basicsr==1.4.2
+beautifulsoup4==4.12.3
+blendmodes==2024.1.1
+blinker==1.8.1
+cachetools==5.3.3
+certifi==2024.2.2
+cffi==1.17.0
 charset-normalizer==3.3.2
+clean-fid==0.1.35
 click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
 colorama==0.4.6
+contourpy==1.2.1
+cycler==0.12.1
+dataclasses-json==0.6.4
 decorator==4.4.2
-flask==3.0.3
-Flask-Cors==5.0.0
-idna==3.8
-imageio==2.35.1
+Django==5.0.6
+dnspython==2.6.1
+einops==0.8.0
+email_validator==2.2.0
+exceptiongroup==1.2.0
+facexlib==0.3.0
+fastapi==0.111.0
+fastapi-cli==0.0.4
+ffmpy==0.3.2
+filelock==3.15.3
+filterpy==1.4.5
+fiona==1.9.6
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+fonttools==4.53.0
+frozenlist==1.4.1
+fsspec==2024.6.0
+ftfy==6.2.0
+future==1.0.0
+geopandas==0.14.3
+gfpgan==1.3.8
+gitdb==4.0.11
+GitPython==3.1.43
+gradio==3.41.2
+gradio_client==0.5.0
+greenlet==3.0.3
+grpcio==1.64.1
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+huggingface-hub==0.23.4
+idna==3.6
+imageio==2.34.1
 imageio-ffmpeg==0.5.1
-importlib-metadata==8.4.0
+importlib_metadata==7.2.0
+importlib_resources==6.4.0
+inflection==0.5.1
+intel-openmp==2021.4.0
+interchange==2021.0.4
 itsdangerous==2.2.0
-jinja2==3.1.4
+Jinja2==3.1.3
+jsonmerge==1.9.2
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
+kornia==0.7.2
+kornia_rs==0.1.3
+langchain==0.1.12
+langchain-community==0.0.28
+langchain-core==0.1.32
+langchain-text-splitters==0.0.1
+langsmith==0.1.27
+lark==1.1.9
+lazy_loader==0.4
+lightning-utilities==0.11.2
+llvmlite==0.43.0
+lmdb==1.4.1
+Markdown==3.6
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.21.1
+matplotlib==3.9.0
+mdurl==0.1.2
+mkl==2021.4.0
+monotonic==1.6
 moviepy==1.0.3
-numpy==2.0.2
-pillow==10.4.0
+mpmath==1.3.0
+multidict==6.0.5
+mypy-extensions==1.0.0
+networkx==3.2.1
+numba==0.60.0
+numpy==1.26.4
+omegaconf==2.3.0
+open-clip-torch==2.24.0
+opencv-python==4.10.0.84
+orjson==3.9.15
+osmnx==1.9.2
+outcome==1.3.0.post0
+packaging==23.2
+pafy==0.5.5
+pandas==2.2.1
+pansi==2020.7.3
+piexif==1.1.3
+pillow==10.3.0
+platformdirs==4.2.2
 proglog==0.1.10
+protobuf==4.25.3
+psutil==6.0.0
+psycopg2-binary==2.9.9
+py2neo==2021.2.4
+pyarrow==16.0.0
+pycparser==2.22
+pydantic==2.6.4
+pydantic_core==2.16.3
+pydeck==0.9.0
+pydub==0.25.1
+pyenv-win==3.1.1
+Pygments==2.18.0
+PyJWT==2.8.0
+pyparsing==3.1.2
+pyproj==3.6.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.9
+pytorch-lightning==2.3.0
 pytubefix==6.14.0
-requests==2.32.3
-tqdm==4.66.5
-urllib3==2.2.2
-werkzeug==3.0.4
-zipp==3.20.1
+pytz==2024.1
+PyYAML==6.0.1
+realesrgan==0.3.0
+referencing==0.35.1
+regex==2024.5.15
+requests==2.31.0
+resize-right==0.0.2
+rich==13.7.1
+rpds-py==0.18.0
+safetensors==0.4.3
+scikit-image==0.24.0
+scipy==1.13.1
+selenium==4.24.0
+semantic-version==2.10.0
+sentencepiece==0.2.0
+shapely==2.0.3
+shellingham==1.5.4
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soundfile==0.12.1
+soupsieve==2.6
+spandrel==0.3.4
+SQLAlchemy==2.0.28
+sqlparse==0.5.0
+starlette==0.37.2
+streamlit==1.34.0
+sympy==1.12.1
+tb-nightly==2.18.0a20240616
+tbb==2021.13.0
+tenacity==8.2.3
+tensorboard-data-server==0.7.2
+tifffile==2024.6.18
+timm==1.0.7
+tokenizers==0.13.3
+tomesd==0.1.3
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.1
+torch==2.3.1
+torchaudio==2.3.1
+torchdiffeq==0.2.4
+torchmetrics==1.4.0.post0
+torchsde==0.2.6
+torchvision==0.18.1
+tornado==6.4
+tqdm==4.66.4
+trampoline==0.1.2
+transformers==4.30.2
+trio==0.26.2
+trio-websocket==0.11.1
+twilio==8.13.0
+typer==0.12.3
+typing-inspect==0.9.0
+typing_extensions==4.10.0
+tzdata==2024.1
+ujson==5.10.0
+urllib3==2.2.1
+uvicorn==0.30.1
+video-to-mp3==0.2
+watchdog==4.0.0
+watchfiles==0.22.0
+wcwidth==0.2.13
+websocket-client==1.8.0
+websockets==11.0.3
+Werkzeug==3.0.3
+wsproto==1.2.0
+yapf==0.40.2
+yarl==1.9.4
+youtube-dl==2021.12.17
+zipp==3.19.2
