--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ pillow==10.4.0
 proglog==0.1.10
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
-pytubefix==latest
+pytubefix==8.12.3
 requests==2.32.3
 SQLAlchemy==2.0.32
 tqdm==4.66.5
